--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <header>
-
+        <img src="./img/Logo.png" alt="logo" id="logo">
+        <h1 class="title">Toboolist</h1>
     </header>
 
     <main>
