struttura nav e main

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
         <h1 class="title">Toboolist</h1>
     </header>
 
-    <main>
+    <nav class="container nav">
+        <button value="Add task">Add Task</button>
+        <button value="Add section">Add Section</button>
+    </nav>
+
+    <main class="container main">
+        <details open="false">
+            <summary>New Task</summary>
+            Lorem ipsum dolor sit amet.
+        </details>
 
     </main>
 
