--- a/index.html
+++ b/index.html
@@ -9,23 +9,29 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
+
+    <!-- inizio header -->
     <header>
         <img src="./img/Logo.png" alt="logo" id="logo">
         <h1 class="title">Toboolist</h1>
     </header>
+    <!-- fine header -->
 
+    <!-- inizio nav -->
     <nav class="container nav">
         <button value="Add task" class="add task">Add Task</button>
         <button value="Add section" class="add section">Add Section</button>
     </nav>
+    <!-- fine nav -->
 
+    <!-- inizio main -->
     <main class="container main">
 
         <div class="testo alto">
 
             <details open="false">
                 <summary><b>New Task</b></summary>
-                &check; Lorem ipsum dolor sit amet.
+                &check; Lorem ipsum dolor sit amet. <span class="editorial blue">editorial</span>
             </details>
 
         </div>
@@ -34,10 +40,13 @@
 
             <details open="false">
                 <summary><b>Today</b></summary>
-                &check; Lorem ipsum dolor sit amet. <br>
-                &check; Lorem ipsum dolor sit amet. <br>
-                &cross; Lorem ipsum dolor sit amet. <br>
-                &check; Lorem ipsum dolor sit amet.
+                &check; Lorem ipsum dolor sit amet. <span class="editorial blue">editorial</span> 
+                <br>
+                &check; Lorem ipsum dolor sit amet. <span class="editorial purple">editorial</span> 
+                <br>
+                &cross; Lorem ipsum dolor sit amet. <span class="editorial green">editorial</span> 
+                <br>
+                &check; Lorem ipsum dolor sit amet. <span class="editorial orange">editorial</span>
             </details>
 
         </div>
@@ -46,20 +55,18 @@
 
             <details open="false">
                 <summary><b>Upcoming</b></summary>
-                &cross; Lorem ipsum dolor sit amet. <br>
-                &check; Lorem ipsum dolor sit amet. <br>
-                &check; Lorem ipsum dolor sit amet. <br>
-                &check; Lorem ipsum dolor sit amet.
+                &cross; Lorem ipsum dolor sit amet.
+                <br>
+                &check; Lorem ipsum dolor sit amet. <span class="editorial purple">editorial</span>
+                <br>
+                &check; Lorem ipsum dolor sit amet. <span class="editorial green">editorial</span>
+                <br>
+                &check; Lorem ipsum dolor sit amet. <span class="editorial blue">editorial</span>
             </details>
 
         </div>
       
-
     </main>
-
-    <footer>
-
-    </footer>
-    
+    <!-- fine main -->
 </body>
 </html>
